compiler/testData/diagnostics/tests/properties/backingField/trivialExplicitBackingFIeld.fir.kt
class A {
    konst number: Number
        <!UNSUPPORTED_FEATURE!>field = 1<!>
}
